Added job market page
Listing jobs including payloads subgrid
Added map to visualize job routes and destinations

--- a/OpenSky.Client/Pages/MyFleet.xaml
+++ b/OpenSky.Client/Pages/MyFleet.xaml
@@ -22,7 +22,7 @@
                       xmlns:converters="clr-namespace:OpenSky.Client.Converters"
                       xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
                       mc:Ignorable="d" 
-                      HorizontalScrollBar="False"
+                      HorizontalScrollBar="False" VerticalScrollBar="False"
                       LoadingText="{Binding LoadingText}"
                       Loaded="MyFleetOnLoaded"
                       d:DesignHeight="450" d:DesignWidth="800">
